Project setup for github actions